--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Expedition</h1>
+    <h2>This is a collection of expeditions made by us</h2>
     <script src="js/app.js"></script>
 </body>
 </html>
