--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <h1>Expedition</h1>
-    <h2>This is a collection of expeditions made by us</h2>
+
+    <header>
+        <h1>Expedition</h1>
+    </header>
+
+    <div class="container">
+        <main>
+            
+        </main>
+    </div>
+
+    <footer>
+        Made with ♥ @ Udacity
+    </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
