--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <header>
         <h1>Adventure</h1>
+        <p>Some description will go here</p>
     </header>
 
     <div class="container">
