--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Adventure</h1>
+        <h1>Adventurous</h1>
         <p>Some description will go here</p>
     </header>
 
