fixed typo in header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <header>
 
-        <h1>Adventurous quest</h1>
+        <h1>Adventurous quests</h1>
 
-        <p>Some description will go here</p>
+        <p>These are our amazing adventures</p>
     </header>
 
     <div class="container">
