--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <h1>Adventurous quests</h1>
 
-        <p>These are our amazing adventures</p>
+        <p>These are our amazing quests</p>
     </header>
 
     <div class="container">
